[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemy wheel.png" type="Texture" id=3]
[ext_resource path="res://assets/EnemyFront.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemy2.png" type="Texture" id=5]
[ext_resource path="res://assets/soundEffects/Enemy.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/soundEffects/EnemyKilled.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "Standard",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 84 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 12 )

[node name="Enemy" type="Node2D"]

[node name="Enemy" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 25
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Enemy"]
position = Vector2( -8, -44 )
scale = Vector2( 0.08, 0.08 )
frames = SubResource( 1 )
animation = "Standard"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2( -6, -23 )
shape = SubResource( 2 )
one_way_collision = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="Enemy"]
position = Vector2( -6, 30 )
scale = Vector2( 0.665, 2.78056 )
rect = Rect2( -50, -50, 100, 60 )
process_parent = true
physics_process_parent = true

[node name="playerLanding" type="Area2D" parent="Enemy"]
position = Vector2( 0, -64 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/playerLanding"]
modulate = Color( 0, 1, 0.109804, 1 )
position = Vector2( 0, -55 )
shape = SubResource( 3 )

[node name="EnemyWheel" type="Sprite" parent="Enemy"]
position = Vector2( 4, 42 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="EnemyMove" type="AudioStreamPlayer2D" parent="Enemy"]
stream = ExtResource( 6 )

[node name="EnemyKill" type="AudioStreamPlayer2D" parent="Enemy"]
stream = ExtResource( 7 )
[connection signal="body_entered" from="Enemy/playerLanding" to="Enemy" method="_on_playerLanding_body_entered"]
